--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Winder
+title: How People Use “Study with me” Videos
 theme: minima
-description: "Linking Speech and Visual Objects to Support Communication in Asynchronous Collaboration"
+description: "Personalizing Ambience and Illusionary Presence: How People Use “Study with me” Videos to Create Effective Studying Environments"
 
-syslogo: /assets/img/winder_logo.svg
+syslogo:
 syscolor: "#7354f3"
 sysfont: Lato
-video: https://drive.google.com/file/d/1Y4-UP6VrjVat2m0-qhxUcFvSX6xzATVt/preview
+video: 
 
 plugins:
   - jekyll-feed
